--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   background-position: center;
   color: white;
   font-family: 'Comfortaa', helvetica; 
-  height: 100%;
+  height: 98vh;
   text-align: center;
 }
 
